<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
<<<<<<< HEAD
        android:icon="@drawable/ic_baseline_view_module_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_baseline_add_box_24"
        android:title="Notificaciones" />

    <item
        android:id="@+id/navigation_entrenamiento"
        android:icon="@drawable/ic_baseline_add_box_24"
        android:title="Entrenamiento" />


=======
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_training"
        android:icon="@drawable/entrenamiento"
        android:title="@string/title_training" />

    <item
        android:id="@+id/navigation_food"
        android:icon="@drawable/alimentos"
        android:title="@string/title_food" />

    <item
        android:id="@+id/navigation_progress"
        android:icon="@drawable/progreso"
        android:title="@string/title_progress" />
>>>>>>> 1fe4d1c6a05bb06e76bf90cf583256809137fa96
</menu>