<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TakeFoodActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/title_food"
        android:layout_gravity="center|top"
        android:gravity="center"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:background="@color/azulVerde2"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/paddingTitleMiddleScreen"
            android:text="@string/whichFoodYouWant"
            android:textSize="@dimen/textSizeTitleMiddleScreen"
            android:textColor="@color/azulOscuro2"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/paddingContentMiddleScreen"
            android:text="@string/selectFoodYouWant"
            android:textSize="@dimen/textSizeContentMiddleScreen"
            android:textColor="@color/gris"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:textStyle="normal"
            />

        <Button
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:background="@drawable/round_button_navy"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="85dp"
            />

        <Button
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:background="@drawable/round_button_white"
            android:textColor="@color/azulOscuro2"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            />
    </LinearLayout>
</LinearLayout>